--- a/components/layout/main-navigation.module.css
+++ b/components/layout/main-navigation.module.css
@@ -10,8 +10,9 @@
   list-style: none;
   display: flex;
   align-items: baseline;
+	justify-content: flex-end;
   margin: 0;
-  padding: 0;
+  padding: 5px;
 	gap: 0.5rem;
 	font-weight: bold;
 }
